<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >
       
    <EditText
        android:id="@+id/etBillAmt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/enter_bill_amt" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvTipIs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn10Tip"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:text="@string/tip_is"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btn20Tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="calculate20PertTip"
        android:layout_alignBaseline="@+id/btn15Tip"
        android:layout_alignBottom="@+id/btn15Tip"
        android:layout_alignRight="@+id/etBillAmt"
        android:text="@string/tip_20" />

    <Button
        android:id="@+id/btn15Tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn10Tip"
        android:onClick="calculate15PertTip"
        android:layout_alignBottom="@+id/btn10Tip"
        android:layout_centerHorizontal="true"
        android:text="@string/tip_15" />

    <TextView
        android:id="@+id/tvTipAmt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvTipIs"
        android:layout_alignBottom="@+id/tvTipIs"
        android:layout_alignLeft="@+id/btn15Tip"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btn10Tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etBillAmt"
        android:layout_below="@+id/etBillAmt"
        android:layout_marginTop="40dp"
        android:onClick="calculate10PertTip"
        android:text="@string/tip_10" />

    <Button
        android:id="@+id/btnCalculateTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/etTipPert"
        android:layout_alignParentRight="true"
        android:onClick="calculateTip"
        android:text="@string/calculate_tip" />

    <EditText
        android:id="@+id/etTipPert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn15Tip"
        android:layout_marginTop="25dp"
        android:inputType="number"
        android:layout_toLeftOf="@+id/btnCalculateTip"
        android:hint="@string/enter_tip"
        android:ems="10" />

</RelativeLayout>
